k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spare-parts-api
  namespace: spare-parts
spec:
  ingressClassName: nginx
  rules:
    - host: spare-parts.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spare-parts-api
                port:
                  number: 8080
